[package]
name = "tiles_downloader"
version = "0.1.0"
edition = "2021"
authors = ["Sogrey <suzhaoheng2006@163.com>"]

[dependencies]
# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# JSON 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 命令行参数
clap = { version = "4.5", features = ["derive"] }

# 进度条
indicatif = "0.17"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 并发
rayon = "1.10"

# 日志
log = "0.4"
env_logger = "0.11"

# 路径处理
pathdiff = "0.2"

# URL 处理
url = "2.5"

[profile.release]
opt-level = 3
lto = true
